--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_variables.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_variables.css
@@ -6,6 +6,7 @@
 	--dark-color_10:#1A1A1A;
 	--dark-color_12:#191919;
 	--dark-color_15: #262626;
+	--dark-color_20: #333333;
 
 	--dark-color_40: #666666;
 
