--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
@@ -3,8 +3,6 @@
 	background-color: var(--dark-color_08);
 }
 
-/* header{
-} */
 .top-banner {
 	min-height: 74px;
 	/** min- для того, щоб при маштабуванні контент в top-banner__content не виходив за межі даного блоку*/
@@ -12,39 +10,22 @@
 	/**внутрішній відступ по відношенню до content-wrap*/
 	gap: 10px;
 	border-bottom: 1px solid var(--dark-color_15);
-	/* border-bottom: 1px solid #fa0000; */
 	background-color: var(--dark-color_08);
 }
 
 .top-banner__content {
-	size: 12px;
+	font-size: 12px;
 	line-height: 18px;
-	/* padding: 0 8px ; */
-	/* letter-spacing: -3%; */
 	color: var(--grey-color_60);
-
 }
-
-.btn__arrow {
-	min-width: 20px;
-	height: 20px;
-	background-image: url("../sourse/img/arrow.svg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	/* border: 1px solid #141414; */
-}
-
 
 .nav-bar {
 	height: 75px;
-
 }
 
 .logo-header {
 	width: 125.23px;
 	height: 35px;
-	/* background-color: aqua; */
 	margin: 20px 0 20px;
 }
 
@@ -62,16 +43,13 @@
 }
 
 .burger-icons {
-	/* background-color: brown; */
 	width: 500px;
 	height: 50px;
 }
 
 .main-menu .burger-menu {
 	color: var(--grey-color_50);
-	/* color: #fff; */
 }
-
 
 .mobile-menu {
 	width: 100vw;
@@ -113,7 +91,6 @@
 }
 
 /*! start - first-screen__wiht-out-header*/
-
 .title-banner {
 	padding: 40px 0 30px;
 }
@@ -126,10 +103,6 @@
 }
 
 .title-container__title {
-	font-size: 20px; /* 30px*/
-	font-family: var(--help-font);
-	color: var(--light_color_absolute);
-	font-weight: 500;
 	margin-bottom: 10px;
 }
 
@@ -141,18 +114,13 @@
 
 .indicators-item {
 	max-height: 118px;
-	/* flex: 1 1 33.333333%; */
-	border-top: 1px solid red;
-	/* border-bottom: 1px solid red;    !на видалення */
 	padding: 20px 0;
-	/* border-left: 1px solid red; */
-
-
+	border-top: 1px solid var(--dark-color_15);
 }
 
 .indicators-item+.item-2 {
-	border-left: 1px solid red;
-	border-right: 1px solid red;
+	border-left: 1px solid var(--dark-color_15);
+	border-right: 1px solid var(--dark-color_15);
 }
 
 .item-2,
@@ -165,9 +133,10 @@
 	padding-right: 20px;
 }
 
-.indicators-item_number {
+.number {
 	font-size: 24px;
 	font-weight: 600;
+	font-family: var(--main-font);
 	color: var(--light_color_absolute);
 }
 
@@ -175,16 +144,10 @@
 	color: var(--corporate-color);
 }
 
-.indicators-item_subscribe {
+.comment {
 	font-size: 14px;
 	font-weight: 400;
 }
-
-/* .wrapper__content_solar-corona{
-	padding-bottom: 40px;
-	padding-left: 40px;
-	padding-right: 40px;
-} */
 
 .content_solar-corona {
 	display: grid;
@@ -194,67 +157,21 @@
 	background-size: cover;
 	background-position: top right;
 	background-repeat: no-repeat;
-	/* padding-bottom: 0 40px 40px; */
 }
 
-.users-img {
-	width: 134px;
-	height: 56px;
-	border-radius: 100px;
-	background-color: var(--dark-color_10);
-	border: 1px solid var(--dark-color_15);
-	border: 1px solid red;
+.content_solar-corona__users-img{
 	margin: 230px 24px 20px;
 }
 
-
-.user-img {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	border: 1px solid var(--dark-color_40);
-	border: 1px solid red;
-	background-size: cover;
-	background-position: top right;
-	background-repeat: no-repeat;
-	top: 7px;
-}
-
-.user-img-1 {
-	background-image: url(../sourse/img/image/image-1.jpg);
-	left: 6px;
-}
-
-.user-img-2 {
-	background-image: url(../sourse/img/image/image-2.jpg);
-	left: 33px;
-}
-
-.user-img-3 {
-	background-image: url(../sourse/img/image/image-3.jpg);
-	left: 61px;
-}
-
-.user-img-4 {
-	background-image: url(../sourse/img/image/image-4.jpg);
-	left: 86px;
-}
-
 .first-screen__content_solar-corona_title {
-	font-size: 18px;
-	font-weight: 500;
-	color: var(--light_color_absolute);
 	margin: 0 24px 4px;
 }
 
-.first-screen__content_solar-corona_subscribe {
-	font-size: 14px;
-	font-weight: 400;
+.first-screen__content_solar-corona_comment {
 	margin: 4px 24px 20px;
 }
 
 .btn-main-indicators {
-	
 	margin: 20px 24px 40px;
 	background-color: var(--dark-color_08);
 	border-radius: 8px;
@@ -265,74 +182,52 @@
 	gap: 4px;
 }
 
-.icon__information-board {
+.information-board__item>.icon {
 	width: 30px;
 	height: 30px;
 	margin-top: 30px;
 	background-image: url(../sourse/img/sprite/css_sprites.png);
 	background-repeat: no-repeat;
 	background-size: 600%;
-
-	/* border: 1px solid red; */
 }
 
 .information-board__item {
 	max-height: 184px;
-	/* padding-bottom: 30px; */
-	/* margin: 0 ; */
 	border-bottom: 1px solid var(--dark-color_15);
 	border-bottom: 1px solid #262626;
 }
 
-.first-item>.icon__information-board {
-	/* width: 30px;
-height: 30px; */
-	/* background-size: 600%; */
+.first-item>.icon {
 	background-position: -141px -50px;
-
 }
 
-.second-item>.icon__information-board {
-	/* width: 30px;
-	height: 30px; */
-	/* background-size: 600%; */
+.second-item>.icon {
 	background-position: -141px -7px;
-
 }
 
-.third-item>.icon__information-board {
-	/* width: 30px;
-	height: 30px; */
-
+.third-item>.icon {
 	background-position: -5px -133px;
 }
-		.information-board_content {
-			margin-top: 16px;
-		}
 
-.title__information-board_content{
-	font-size: 16px;
-	font-weight: 500;
-	/* margin-top: 16px; */
-	color: var(--light_color_absolute);
+.information-board__content {
+	margin-top: 16px;
+
 }
-.information-board_content > .supscribe{
+
+.information-board__content_title {
+	margin-bottom: 2px;
+}
+
+.information-board_content>.comment {
 	font-size: 14px;
 	font-weight: 400;
-	/* margin-bottom: 10px; */
 }
 
-.information-board__item > .comment{
+.information-board__item>.comment {
 	margin-top: 10px;
 	margin-bottom: 30px;
 }
 
-.arrow_yellow-round {
-	min-width: 40px;
-	min-height: 40px;
-	border-radius: 50%;
-	background-image: url(../sourse/img/arrow_yellow-round.svg);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+.information-board__content>button {
+	margin-left: 16px;
 }
